Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,20 @@ a{
 
 @media screen and (max-width: 500px) {
     body {
+        /* min-width: 100%;
         background-attachment: none;
         background-position: none;
         background-repeat: no-repeat;
-        /* background-size: contain; */
+        background-size: contain;
         background-image: url('images/trees_nature_background.jpg');
-        /* background-size:90%;*/
-        /* background-size: cover;*/
-       background-size:100%;
-       width:100%;
+        background-size:90%;
+        background-size: cover;
+       background-size:100%; */
+
+       background-image: url('images/trees_nature_background.jpg') no-repeat center center fixed;
+       -webkit-background-size: cover;
+       -moz-background-size: cover;
+       -o-background-size: cover;
+       background-size: cover;
     }
 }
